# bmstu-tisd-labs

./: .clang-format  .gitignore
lab_1/: CMakeLists.txt  build_debug.sh  build_debug_asan.sh  build_debug_msan.sh  build_debug_ubsan.sh  clean.sh  collect_coverage.sh  constants.h  long_division.c  long_division.h  long_numbers.c  long_numbers.h  long_numbers_io.c  long_numbers_io.h  main.c  test_with_san.sh
lab_1/func_tests/data/: neg_01_in.txt  neg_02_in.txt  neg_03_in.txt  neg_04_in.txt  neg_05_in.txt  neg_06_in.txt  neg_07_in.txt  neg_08_in.txt  neg_09_in.txt  neg_10_in.txt  neg_11_in.txt  neg_12_in.txt  neg_13_in.txt  neg_14_in.txt  neg_15_in.txt  neg_16_in.txt  neg_18_in.txt  pos_01_in.txt  pos_01_out.txt  pos_02_in.txt  pos_02_out.txt  pos_03_in.txt  pos_03_out.txt  pos_04_in.txt  pos_04_out.txt  pos_05_in.txt  pos_05_out.txt  pos_06_in.txt  pos_06_out.txt  pos_07_in.txt  pos_07_out.txt  pos_08_in.txt  pos_08_out.txt  pos_09_in.txt  pos_09_out.txt  pos_10_in.txt  pos_10_out.txt  pos_11_in.txt  pos_11_out.txt  pos_12_in.txt  (+1 more)
lab_1/func_tests/scripts/: comparator.sh  func_tests.sh  neg_case.sh  pos_case.sh
lab_2/: 1000_rand.txt  2000_rand.txt  30_rand.txt  5000_rand.txt  5000_rev.txt  5000_sorted.txt  gen_perf.py  makefile
lab_2/inc/: book_types.h  errors.h  io.h  key_table.h  sort.h  table.h
lab_2/src/: book_types.c  io.c  key_table.c  main.c  sort.c  table.c
lab_3/: gen.py  makefile
lab_3/inc/: errors.h  perf_test.h  regular_matr.h  sort.h  sparse_matr.h  sparse_vec.h  (+1 more)
lab_4/: makefile
lab_6/: makefile
lab_7/: makefile  test.txt
lab_8/: makefile
(+120 files in other folders)
